--- a/src/styles/elements/table-structure.css
+++ b/src/styles/elements/table-structure.css
@@ -5,7 +5,7 @@
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: thin;
-  padding: 0 20px;
+  padding: 0;
   margin-top: 1rem;
   display: flex;
   justify-content: center;
